Fix "privacy collection notice"

--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -295,7 +295,7 @@
     <hr>
 
     <div class="container mb-10">
-      Privacy Collection Notice By completing this form you agree that your
+      <b>Privacy Collection Notice:</b> By completing this form you agree that your
       responses will be provided to the Australian BioCommons and Galaxy
       Australia and will be used solely for the purposes of determining
       suitability for access to the Australian FGENESH++ Service. Your
