--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -132,63 +132,9 @@
           The FGENESH++ Terms of Use and Acknowledgement Statement
           are required to be acknowledged prior to access.
         </p>
-        <button
-          class="ga-btn"
-          type="button"
-          data-bs-toggle="modal"
-          data-bs-target="#termsModal"
-        >
-          View Terms of Use
-        </button>
-        <div class="form-check mt-2" style="visibility: hidden;">
-          {{ form.agree_terms.errors }}
-          <input
-            class="form-check-input"
-            id="agreeTermsInput"
-            name="agree_terms"
-            type="checkbox"
-            required
-            {% if form.agree_terms.value %}checked{% endif %}
-          />
-          <label for="agreeTermsInput" class="check-label">
-            I, the Principal Investigator or End User have read and acknowledged
-            the FGENESH++ Service Terms of Use and Policies.
-          </label>
-        </div>
 
-        <div class="modal" tabindex="-1" id="termsModal">
-          <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <iframe
-                  src="{% static 'home/documents/fgenesh-biocommons-terms.pdf' %}"
-                  style="width: 100%; height: calc(80vh - 100px);"
-                  frameborder="0"
-                ></iframe>
-              </div>
-              <div class="modal-footer justify-content-center">
-                <div class="w-100">
-                  <p class="text-center">
-                    I, the Principal Investigator or End User have read and acknowledged
-                    the FGENESH++ Service Terms of Use and Policies.
-                  </p>
-                </div>
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-dismiss="modal"
-                  onclick="agreeTermsAction(this);"
-                >
-                  Agree
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+        {% include 'home/requests/access/snippets/agree-terms-modal.html' %}
+
       </div>
 
       <hr>
@@ -257,23 +203,6 @@
 {% block script %}
 <script src="{% static 'home/js/tree-list.js' %}"></script>
 <script src="{% static 'home/js/forms.js' %}"></script>
-<script type="text/javascript">
-  $('form').submit( (e) => {
-    showTermsInput();
-    $('button[type="submit"]').prop('disabled', true);
-    $('button[type="submit"]').html('<i class="fas fa-sync-alt fa-spin"></i>');
-    return true;
-  });
-
-  function agreeTermsAction(el) {
-    showTermsInput();
-    $('#agreeTermsInput').attr('checked', true);
-  }
-
-  const showTermsInput = () =>  $('#termsModal')
-    .siblings('.form-check')
-    .css('visibility', 'visible');
-</script>
 {% endblock %}
 
 
