Add debugging to agree-terms-modal

--- a/webapp/home/templates/home/requests/access/snippets/agree-terms-modal.html
+++ b/webapp/home/templates/home/requests/access/snippets/agree-terms-modal.html
@@ -90,6 +90,11 @@
         return setTimeout(setEventHandler, 100);
       }
       $('#termsModal iframe').contents().on('scroll', (event) => {
+
+        console.log('scrollFromEnd: ', $(termsContainer)[0].scrollHeight);
+        console.log('scrollTop: ', $(termsContainer).scrollTop());
+        console.log('iframe height: ', $('#termsModal iframe').height());
+
         const scrollFromEnd = $(termsContainer)[0].scrollHeight
         - $(termsContainer).scrollTop()
         - $('#termsModal iframe').height();
