Bulk email unsubscribe mechanism

--- a/scripts/mail/templates/body.html
+++ b/scripts/mail/templates/body.html
@@ -30,5 +30,26 @@
   <p>
     Galaxy Australia Administrators
   </p>
+
+  <br><br>
+
+  <p>
+    <small>
+      You received this email because you registered an account with this email
+      address on
+      <a href="https://usegalaxy.org.au">Galaxy Australia</a>.
+      If you no longer wish to receive marketing communications from Galaxy
+      Australia, please
+      <a href="{{ unsubscribe_href }}">unsubscribe</a>.
+    </small>
+  </p>
+
+  <p>
+    <small>
+      If the above link does not work, please copy and paste the following link
+      into your browser:
+      {{ unsubscribe_href }}
+    </small>
+  </p>
 </body>
 </html>
