--- a/webapp/home/templates/generic.html
+++ b/webapp/home/templates/generic.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container w-50">
+<div class="container w-50" style="min-height: calc(75vh - 320px);">
   <h1>{{ title }}</h1>
   <br>
   <p>{{ message }}</p>
