--- a/deploy/ansible/roles/webapp/templates/update.sh.j2
+++ b/deploy/ansible/roles/webapp/templates/update.sh.j2
@@ -14,6 +14,7 @@ fi
 cd galaxy-content-site
 source '{{ venv_root }}/bin/activate'
 git pull
+python -m pip install -r requirements.txt
 cd webapp
 
 # Collect any new static files for Nginx if neccessary
