Implement CoverImage for banner-style images

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -25,6 +25,7 @@
   <section class="container-fluid" id="tagline">
 
     {% include 'home/snippets/static-notices.html' %}
+    {% include 'home/snippets/cover-image.html' %}
 
     <p class="my-5">
       Galaxy Australia is an
