Update Service lifetime to Dec 2026

--- a/webapp/home/templates/home/snippets/about/service-levels.html
+++ b/webapp/home/templates/home/snippets/about/service-levels.html
@@ -35,7 +35,7 @@
 <h3>Service lifetime</h3>
 
 <p>
-  The service will continue for the lifetime of the Australian BioCommons, which is currently funded until June 2023.
+  Services operations are currently funded until December 2026.
 </p>
 
 <p>
