Link to tool access forms

--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -16,7 +16,7 @@
   <div class="mb-10">
     <h2> Galaxy Australia FGENESH++ Access Request </h2>
     <small>
-      <a href="/request">
+      <a href="/request/access">
         <span class="material-icons">arrow_back</span>
         Back to support menu
       </a>
