--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -41,12 +41,12 @@
   <section class="row justify-content-between text-center" id="header-cards">
     <div class="tile">
       <div class="card-body">
-        <h1 class="card-title"><span class="material-icons">fingerprint</span></h1>
+        <h1 class="card-title"><span class="material-icons">key</span></h1>
         <p>
-          Alphafold 2.0 on Galaxy Australia
+          Request access to specialised tools AlphaFold2, FGENESH++ and CellRanger
         </p>
-        <a class="ga-btn" href="/request/access/alphafold">
-          Apply now
+        <a class="ga-btn" href="/request/access">
+          Request now
         </a>
       </div>
       <!-- <div class="card-body">
