--- a/webapp/home/templates/home/requests/access/cellranger.html
+++ b/webapp/home/templates/home/requests/access/cellranger.html
@@ -15,7 +15,7 @@
   <div class="mb-10">
     <h2> Galaxy Australia CellRanger Access Request </h2>
     <small>
-      <a href="/request">
+      <a href="/request/access">
         <span class="material-icons">arrow_back</span>
         Back to support menu
       </a>
