--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -65,24 +65,18 @@
           </a>
         </div>
       </div>
-    </div>
 
-    <hr>
-
-    <h3 class="text-center">Request access to resources on Galaxy Australia</h3>
-
-    <div class="card-group request-menu-cards">
       <div class="card">
-        <h1><span class="material-icons">fingerprint</span></h1>
+        <h1><span class="material-icons">key</span></h1>
         <div class="card-body">
           <p>
-            Apply to use AlphaFold 2 to predict protein structures
+            Request access to specialised tools AlphaFold2, FGENESH++ and CellRanger
           </p>
         </div>
 
         <div class="card-footer">
-          <a class="ga-btn" href="/request/access/alphafold">
-            Apply now
+          <a class="ga-btn" href="/request/access">
+            Request access
           </a>
         </div>
       </div>
