--- a/webapp/home/templates/home/requests/access/index.html
+++ b/webapp/home/templates/home/requests/access/index.html
@@ -11,11 +11,9 @@
 {% block content %}
 
 <main class="container mt-4">
-  <h1> Galaxy Australia Support </h1>
+  <h1> Request access to specialist tools </h1>
 
   <div class="m-10" style="margin-top: 15vh;">
-    <h3 class="text-center">Request access to specialist tools on Galaxy Australia</h3>
-
     <div class="my-3 mx-auto" style="max-width: 800px;">
       <p>
         Galaxy Australia users from Australian institutions
