--- a/webapp/home/templates/home/requests/access/snippets/personal-details-fields.html
+++ b/webapp/home/templates/home/requests/access/snippets/personal-details-fields.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="col-sm-12">
-    <label for="emailInput" class="form-label">Galaxy account email</label>
+    <label for="emailInput" class="form-label">Galaxy Australia account email</label>
     {{ form.email.errors }}
     <input class="form-control" id="emailInput" type="email" name="email"
       value="{{form.email.value|default_if_none:''}}"
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="col-sm-12">
+  <!-- <div class="col-sm-12">
     <label for="institutionInput" class="form-label">Institution</label>
     {{ form.institution.errors }}
     <input
@@ -58,5 +58,5 @@
     <div class="form-text" id="institutionHelp">
       Your department, organization or research institute
     </div>
-  </div>
+  </div> -->
 </div>
