--- a/webapp/home/templates/home/requests/access/alphafold.html
+++ b/webapp/home/templates/home/requests/access/alphafold.html
@@ -17,7 +17,7 @@
     <small>
       <a href="/request/access">
         <span class="material-icons">arrow_back</span>
-        Back to support menu
+        Back to tool access menu
       </a>
     </small>
   </div>
