Add link to user preferences

--- a/webapp/home/templates/home/requests/access/snippets/personal-details-fields.html
+++ b/webapp/home/templates/home/requests/access/snippets/personal-details-fields.html
@@ -29,7 +29,11 @@
             for us to provide access
           </li>
           <li>
-            Go to User > Preferences > Manage information to see your registered
+            Go to
+            <a href="https://usegalaxy.org.au/user/information" target="_blank">
+              User > Preferences > Manage information
+            </a>
+            to see your registered
             email address on usegalaxy.org.au
           </li>
           <li>
