Update default export site content

--- a/webapp/home/test/data/subsite/media/templates/intro.html
+++ b/webapp/home/test/data/subsite/media/templates/intro.html
@@ -8,4 +8,18 @@
   <p>
     Welcome to the Galaxy Anarctica Archaeology Lab! Get quick access to tools, workflows and tutorials for all things tombs and fossils.
   </p>
+
+  <a class="export-info-button" href="https://github.com/usegalaxy-au/galaxy-media-site/blob/export-lab-pages/webapp/home/test/data/subsite/media/templates/intro.html">
+    <i class="fab fa-github"></i>
+    View on GitHub
+  </a>
 </section>
+
+
+<script>
+  $('#tagline').hover(function() {
+    $('#tagline .export-info-button').show();
+  }, function() {
+    $('#tagline .export-info-button').hide();
+  });
+</script>
