--- a/webapp/home/test/data/subsite/media/static/custom.css
+++ b/webapp/home/test/data/subsite/media/static/custom.css
@@ -1,3 +1,21 @@
 #header-logo {
   width: unset;
 }
+#tagline:hover {
+  border: 2px solid black;
+  background-color: #eee;
+}
+.export-info-button {
+  background-color: #000;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px 0;
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
