Update example exported lab page

--- a/webapp/home/test/data/subsite/media/templates/footer.html
+++ b/webapp/home/test/data/subsite/media/templates/footer.html
@@ -1,7 +1,7 @@
 <hr>
 
-<footer class="text-center">
-  <p>Here is the custom footer that I wrote for the site!</p>
+<footer class="text-center" id="footer">
+  <p>Here is a custom footer that I wrote for this page!</p>
 
   <p>
     <small>
