--- a/webapp/home/templates/home/subdomains/components/section.html
+++ b/webapp/home/templates/home/subdomains/components/section.html
@@ -1,4 +1,4 @@
-<section class="my-5">
+<section class="my-5" id="{{ section.id }}Section">
   <h4 class="mb-3">{{ section.title }}</h4>
 
   <div class="border rounded">
