--- a/webapp/home/templates/home/subdomains/exported.html
+++ b/webapp/home/templates/home/subdomains/exported.html
@@ -34,7 +34,7 @@
   {% include 'home/subdomains/components/feedback.html' with subdomain='genome' %}
   {% endcomment %}
 
-  <section class="header-subdomain australia d-flex align-items-center h-100">
+  <section id="headerSection" class="header-subdomain australia d-flex align-items-center h-100">
     {% if snippets.header_logo %}
     <img id="header-logo" src="{{ snippets.header_logo }}" alt="{{ site_name }} Logo">
     {% endif %}
