--- a/webapp/home/test/data/subsite/media/static/custom.css
+++ b/webapp/home/test/data/subsite/media/static/custom.css
@@ -1,14 +1,21 @@
 #header-logo {
   width: unset;
 }
-#tagline:hover {
-  border: 2px solid black;
+.export-info-hover {
+  position: relative;
+}
+.export-info-hover:hover {
+  box-shadow: 0 0 2px 0 #000;
   background-color: #eee;
 }
 .export-info-button {
+  font-size: 1rem;
+  font-weight: normal;
+  font-family: var(--bs-body-font-family);
   background-color: #000;
   color: #fff;
   padding: 5px 10px;
+  margin: 0;
   border-radius: 5px;
   text-decoration: none;
   display: inline-block;
@@ -16,6 +23,12 @@
   cursor: pointer;
   display: none;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -43px;
+  right: -2px;
+}
+.export-info-hover:hover .export-info-button{
+  display: block;
+}
+li {
+  margin-bottom: .5rem;
 }
