List of institutions generated from institutions.json

--- a/webapp/home/templates/home/snippets/about/list-of-institutions.html
+++ b/webapp/home/templates/home/snippets/about/list-of-institutions.html
@@ -7,405 +7,15 @@
   </thead>
 
   <tbody>
-    <tr>
-      <td>ANZAC Research Institute</td>
-      <td>@anzac.edu.au</td>
-    </tr>
-    <tr>
-      <td>Australia New Zealand Gynaecological Oncology Group</td>
-      <td>@anzgog.org.au</td>
-    </tr>
-    <tr>
-      <td>Australian Catholic University</td>
-      <td>@myacu.edu.au, @acu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Australian Centre for Heart Health</td>
-      <td>@australianhearthealth.org.au</td>
-    </tr>
-    <tr>
-      <td>Australian Institute of Aboriginal and Torres Strait Islander Studies</td>
-      <td>@aiatsis.gov.au</td>
-    </tr>
-    <tr>
-      <td>Australian Institute of Marine Science</td>
-      <td>@aims.gov.au</td>
-    </tr>
-    <tr>
-      <td>Australian Museum</td>
-      <td>@nma.gov.au</td>
-    </tr>
-    <tr>
-      <td>Australian National University</td>
-      <td>@anu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Australian Red Cross</td>
-      <td>@redcrossblood.org.au</td>
-    </tr>
-    <tr>
-      <td>Baker Heart and Diabetes Institute</td>
-      <td>@baker.edu.au, @bakeridi.edu.au</td>
-    </tr>
-    <tr>
-      <td>Bond University</td>
-      <td>@bond.edu.au</td>
-    </tr>
-    <tr>
-      <td>Burnet Institute</td>
-      <td>@burnet.edu.au</td>
-    </tr>
-    <tr>
-      <td>Calvary</td>
-      <td>@calvarymater.org.au</td>
-    </tr>
-    <tr>
-      <td>Cancer Council NSW</td>
-      <td>@nswcc.org.au</td>
-    </tr>
-    <tr>
-      <td>Cancer Council Queensland</td>
-      <td>@cancerqld.org.au</td>
-    </tr>
-    <tr>
-      <td>Cancer Council Victoria</td>
-      <td>@cancervic.org.au</td>
-    </tr>
-    <tr>
-      <td>Centenary Institute of Cancer Medicine and Cell Biology</td>
-      <td>@centenary.org.au</td>
-    </tr>
-    <tr>
-      <td>Central Adelaide Local Health Network Incorporated</td>
-      <td>@sa.gov.au</td>
-    </tr>
-    <tr>
-      <td>Central Australian Aboriginal Congress Aboriginal Corporation</td>
-      <td>@caac.org.au</td>
-    </tr>
-    <tr>
-      <td>Central Queensland University</td>
-      <td>@cqu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Centre for Eye Research Australia</td>
-      <td>@cera.org.au</td>
-    </tr>
-    <tr>
-      <td>Charles Darwin University</td>
-      <td>@cdu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Charles Sturt University</td>
-      <td>@csu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Children's Medical Research Institute</td>
-      <td>@cmri.org.au</td>
-    </tr>
-    <tr>
-      <td>CSIRO</td>
-      <td>@csiro.au</td>
-    </tr>
-    <tr>
-      <td>Curtin University</td>
-      <td>@curtin.edu.au, @student.curtin.edu.au, @postgrad.curtin.edu.au</td>
-    </tr>
-    <tr>
-      <td>Deakin University</td>
-      <td>@deakin.edu.au</td>
-    </tr>
-    <tr>
-      <td>Ear Science Institute Australia Incorporated</td>
-      <td>@earscience.org.au</td>
-    </tr>
-    <tr>
-      <td>Edith Cowan University</td>
-      <td>@ecu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Federation University Australia</td>
-      <td>@federation.edu.au</td>
-    </tr>
-    <tr>
-      <td>Flinders University</td>
-      <td>@flinders.edu.au</td>
-    </tr>
-    <tr>
-      <td>Florey Institute of Neuroscience and Mental Health</td>
-      <td>@florey.edu.au</td>
-    </tr>
-    <tr>
-      <td>Griffith University</td>
-      <td>@griffith.edu.au, @griffithuni.edu.au</td>
-    </tr>
-    <tr>
-      <td>Health Support Queensland</td>
-      <td>@health.qld.gov.au</td>
-    </tr>
-    <tr>
-      <td>Heart Research Institute</td>
-      <td>@hri.org.au</td>
-    </tr>
-    <tr>
-      <td>Hudson Institute of Medical Research Institute for Breathing and Sleep</td>
-      <td>@hudson.org.au</td>
-    </tr>
-    <tr>
-      <td>James Cook University</td>
-      <td>@jcu.edu.au, @my.jcu.edu.au</td>
-    </tr>
-    <tr>
-      <td>La Trobe University</td>
-      <td>@latrobe.edu.au, @students.latrobe.edu.au</td>
-    </tr>
-    <tr>
-      <td>Ludwig Institute for Cancer Research</td>
-      <td>@ludwig.edu.au</td>
-    </tr>
-    <tr>
-      <td>Macquarie University</td>
-      <td>@mq.edu.au, @students.mq.edu.au, @hdr.mq.edu.au</td>
-    </tr>
-    <tr>
-      <td>Mater Research</td>
-      <td>@mater.org.au</td>
-    </tr>
-    <tr>
-      <td>Melanoma Institute Australia</td>
-      <td>@melanoma.org.au</td>
-    </tr>
-    <tr>
-      <td>Melbourne Health</td>
-      <td>@mh.org.au</td>
-    </tr>
-    <tr>
-      <td>Menzies School of Health Research</td>
-      <td>@menzies.edu.au</td>
-    </tr>
-    <tr>
-      <td>Metro South Hospital and Health Service</td>
-      <td>@health.qld.gov.au</td>
-    </tr>
-    <tr>
-      <td>Monash University</td>
-      <td>@monash.edu, @student.monash.edu</td>
-    </tr>
-    <tr>
-      <td>Murdoch Childrens Research Institute</td>
-      <td>@mcri.edu.au</td>
-    </tr>
-    <tr>
-      <td>Murdoch University</td>
-      <td>@murdoch.edu.au, @student.murdoch.edu.au, @ccg.murdoch.edu.au</td>
-    </tr>
-    <tr>
-      <td>Museum Victoria</td>
-      <td>@museum.vic.gov.au</td>
-    </tr>
-    <tr>
-      <td>National Acoustic Laboratories</td>
-      <td>@nal.gov.au</td>
-    </tr>
-    <tr>
-      <td>National Ageing Research Institute</td>
-      <td>@nari.edu.au</td>
-    </tr>
-    <tr>
-      <td>National Institute for Aboriginal and Torres Strait Islander Health Research</td>
-      <td>@lowitja.org.au</td>
-    </tr>
-    <tr>
-      <td>NSW Health Pathology</td>
-      <td>@health.nsw.gov.au</td>
-    </tr>
-    <tr>
-      <td>Peter MacCallum Cancer Centre</td>
-      <td>@petermac.org</td>
-    </tr>
-    <tr>
-      <td>Queensland University of Technology</td>
-      <td>@qut.edu.au</td>
-    </tr>
-    <tr>
-      <td>RMIT University</td>
-      <td>@rmit.edu.au, @student.rmit.edu.au</td>
-    </tr>
-    <tr>
-      <td>Royal Brisbane and Women's Hospital Foundation</td>
-      <td>@rbwhfoundation.com.au</td>
-    </tr>
-    <tr>
-      <td>South Australian Health and Medical Research Institute</td>
-      <td>@sahmri.com</td>
-    </tr>
-    <tr>
-      <td>South Australian Museum</td>
-      <td>@samuseum.sa.gov.au</td>
-    </tr>
-    <tr>
-      <td>Southern Cross University</td>
-      <td>@scu.edu.au, @student.scu.edu.au</td>
-    </tr>
-    <tr>
-      <td>St Vincent's Institute of Medical Research</td>
-      <td>@svi.edu.au</td>
-    </tr>
-    <tr>
-      <td>St Vincent’s Health Australia</td>
-      <td>@svha.org.au</td>
-    </tr>
-    <tr>
-      <td>Swinburne University of Technology</td>
-      <td>@swin.edu.au, @student.swin.edu.au</td>
-    </tr>
-    <tr>
-      <td>Sydney Local Health District</td>
-      <td>@health.nsw.gov.au</td>
-    </tr>
-    <tr>
-      <td>Telethon Kids Institute</td>
-      <td>@telethonkids.org.au</td>
-    </tr>
-    <tr>
-      <td>The Asbestos Diseases Research Institute</td>
-      <td>@adri.org.au</td>
-    </tr>
-    <tr>
-      <td>The Bionics Institute of Australia</td>
-      <td>@bionicsinstitute.org</td>
-    </tr>
-    <tr>
-      <td>Queensland Institute of Medical Research</td>
-      <td>@qimr.edu.au, @qimrberghofer.edu.au</td>
-    </tr>
-    <tr>
-      <td>The Garvan Institute of Medical Research</td>
-      <td>@garvan.org.au</td>
-    </tr>
-    <tr>
-      <td>The George Institute for Global Health</td>
-      <td>@georgeinstitute.org</td>
-    </tr>
-    <tr>
-      <td>The Olivia Newton-John Cancer Research Institute</td>
-      <td>@onjcri.org.au</td>
-    </tr>
-    <tr>
-      <td>The Prince Charles Hospital</td>
-      <td>@health.qld.gov.au</td>
-    </tr>
-    <tr>
-      <td>The Sax Institute</td>
-      <td>@saxinstitute.org.au</td>
-    </tr>
-    <tr>
-      <td>The University of Adelaide</td>
-      <td>@adelaide.edu.au</td>
-    </tr>
-    <tr>
-      <td>The University of New England</td>
-      <td>@une.edu.au</td>
-    </tr>
-    <tr>
-      <td>The University of Newcastle</td>
-      <td>@newcastle.edu.au</td>
-    </tr>
-    <tr>
-      <td>The University of Notre Dame Australia</td>
-      <td>@nd.edu.au</td>
-    </tr>
-    <tr>
-      <td>The University of Queensland</td>
-      <td>@uq.edu.au, @students.uq.edu.au</td>
-    </tr>
-    <tr>
-      <td>Walter and Eliza Hall Institute</td>
-      <td>@wehi.edu.au</td>
-    </tr>
-    <tr>
-      <td>Torrens University Australia</td>
-      <td>@torrens.edu.au</td>
-    </tr>
-    <tr>
-      <td>Townsville Hospital and Health Service</td>
-      <td>@health.qld.gov.au</td>
-    </tr>
-    <tr>
-      <td>Trans Tasman Radiation Oncology Group</td>
-      <td>@trog.com.au</td>
-    </tr>
-    <tr>
-      <td>University of Canberra</td>
-      <td>@canberra.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Melbourne</td>
-      <td>@unimelb.edu.au, @student.unimelb.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of New South Wales</td>
-      <td>@unsw.edu.au, @ad.unsw.edu.au, @student.unsw.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of South Australia</td>
-      <td>@unisa.edu.au, @mymail.unisa.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Southern Queensland</td>
-      <td>@usq.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Sydney</td>
-      <td>@sydney.edu.au, @uni.sydney.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Tasmania</td>
-      <td>@utas.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Technology Sydney</td>
-      <td>@uts.edu.au, @student.uts.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of the Sunshine Coast</td>
-      <td>@usc.edu.au, @student.usc.edu.au, @research.usc.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Western Australia</td>
-      <td>@uwa.edu.au, @student.uwa.edu.au, @research.uwa.edu.au</td>
-    </tr>
-    <tr>
-      <td>University of Wollongong</td>
-      <td>@uow.edu.au, @uowmail.edu.au</td>
-    </tr>
-    <tr>
-      <td>VCS Foundation</td>
-      <td>@vcs.org.au</td>
-    </tr>
-    <tr>
-      <td>Victor Chang Cardiac Research Institute</td>
-      <td>@victorchang.edu.au</td>
-    </tr>
-    <tr>
-      <td>Victoria University</td>
-      <td>@vu.edu.au</td>
-    </tr>
-    <tr>
-      <td>Wesley Medical Research</td>
-      <td>@wesleyresearch.com.au</td>
-    </tr>
-    <tr>
-      <td>Western Sydney Local Health District</td>
-      <td>@health.nsw.gov.au</td>
-    </tr>
-    <tr>
-      <td>Western Sydney University</td>
-      <td>@westernsydney.edu.au</td>
-    </tr>
-    <tr>
-      <td>Woolcock Institute of Medical Research</td>
-      <td>@woolcock.org.au</td>
-    </tr>
+    {% for institution in institutions %}
+    <tr>
+      <td>{{ institution.name }}</td>
+      <td>
+        {% for domain in institution.domains %}
+        {{ domain }}{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      </td>
+    </tr>
+    {% endfor %}
   </tbody>
 </table>
